# docweaver

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Readme.md  build.rs  config.yml
assets/styles/: doc.css  index.css  main.css
docs/: LICENSE.md  a.md  future.md  intro.md
docs/b/: c.md
docs/getting-started/: configuration.md  index.md  project-structure.md
docs/usage/: index.md
src/: main.rs  router.rs
src/lib/: configuration.rs  mod.rs  router.rs  template.rs
templates/: 404.html  base.html  doc.html  index.html
templates/assets/: main.scss
templates/common/: head.html  nav.html
