[package]
name = "docweaver"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib/mod.rs"

[[bin]]
path = "src/bin/main.rs"
name = "docweaver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["comrak", "with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["macros"] }
comrak = "0.22.0"
config = "0.14.0"
eyre = "0.6.12"
grass = "0.13.2"
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["full"] }
yaml-rust = "0.4.5"
